search input cards container overflow fixed

--- a/web-app/src/components/FilterBar/FilterBar.css
+++ b/web-app/src/components/FilterBar/FilterBar.css
@@ -1,4 +1,4 @@
-.filter-container{
+.filter{
     display: flex;
     flex-wrap: wrap;
     width: 100%;
@@ -23,8 +23,9 @@
     display: none;
 }
 .search-field{
-    border-radius: 20px;
-    outline: none;
+    width: 12%;
+    height: 35%;
+    border:2px solid black;
 }
 
 .genres{
