--- a/web-app/src/pages/Cart/Cart.css
+++ b/web-app/src/pages/Cart/Cart.css
@@ -5,11 +5,3 @@
     width: 100%;
     height: 100%;
 }
-
-.header-container{
-    position: fixed;
-    height: 80px;
-    width: 100%;
-    display: flex;
-    z-index: 1;
-}
