--- a/web-app/src/pages/Home/Cards Container/CardsContainer.css
+++ b/web-app/src/pages/Home/Cards Container/CardsContainer.css
@@ -2,11 +2,12 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: black;
     opacity: 0.9;
     justify-content: space-evenly;
     padding: 20px 0;
+    overflow-y: auto;
 }
 
 @media (max-width: 600px){
