--- a/web-app/src/pages/Home/Home.css
+++ b/web-app/src/pages/Home/Home.css
@@ -1,14 +1,12 @@
 .home {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 
 .header-container{
     position: fixed;
-    height: 80px;
+    top:0;
+    height: 70px;
     width: 100%;
     display: flex;
     z-index: 1;
@@ -17,18 +15,16 @@
 .main-container{
     display: flex;
     flex-wrap: wrap;
-    margin-top: 80px;
+    margin-top: 70px;
     width: 100%;
 }
-.filter{
-    display: inline-flex;
-    align-items: center;
+.filter-container{
     width: 100%;
-    height: 5%;
+    height: 60px;
     background-color: white;
 }
 @media (max-width: 600px){
-    .filter{
+    .filter-container{
         height: 50px;
        flex-direction: column;
     }
